--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Maker Space of Joe</a>
+          <a class="navbar-brand" href="index.html">Space of Joe</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -79,7 +79,7 @@
       <div class="jumbotron">
         <h1>Welcome to Maker Space of Joe</h1>
         <p style="color:DarkSeaGreen;margin-left:20px;text-indent: 2em">
-        Hello,I'Joe.I come from Beijing to participate in the training of FabLab in Shanghai.First,I have to thank my teacher,<a href="http://www.fabacademy.org/archives/2015/eu/students/silli.saverio/index.html">Saverio Silli</a>.He teach me how to use the equipments,such as laser cutting machine,high precision 3D printing,3D scanning instrument,CNC digital machine tools,etc,and the method of thinking in the Fablab Shanghai.The Fablab is an open shared space,it's open to people in the society to share ideas to people around the world.So I will show you what I have learn in the exercises of title column.As long as you have originality and dream,the Fablab will give you a stage to show your creative.
+        Hello,I'm Sunny Joe.I come from Beijing to participate in the training of FabLab in Shanghai.First,I have to thank my teacher,<a href="http://www.fabacademy.org/archives/2015/eu/students/silli.saverio/index.html">Saverio Silli</a>.He teach me how to use the equipments,such as laser cutting machine,high precision 3D printing,3D scanning instrument,CNC digital machine tools,etc,and the method of thinking in the Fablab Shanghai.The Fablab is an open shared space,it's open to people in the society to share ideas to people around the world.So I will show you what I have learn in the exercises of title column.As long as you have originality and dream,the Fablab will give you a stage to show your creative.
         </p>
 		
       </div>
